fix: Resolve missing background in rulebookView and creditView

--- a/client/src/main/resources/css/BaseViewStyle.css
+++ b/client/src/main/resources/css/BaseViewStyle.css
@@ -23,16 +23,16 @@
     -fx-font-size: 30px;
 }
 
-#InnerBox{
-    -fx-background-color: D9D9D9;
+.InnerBox{
+    -fx-background-color: #D9D9D9;
     -fx-background-radius: 25;
-    -fx-border-color: B93131;
+    -fx-border-color: #B93131;
     -fx-border-radius: 25;
     -fx-border-width: 6;
 }
 
 .listView {
-    -fx-background-color: D9D9D9;
+    -fx-background-color: #D9D9D9;
 }
 
 /*
